# zk-cards-archived

./: .gitignore  Cargo.toml  data.json
examples/: evm.rs  exp.rs  preimage.rs
src/: addmod_chip.rs  addmod_circuit.rs  distinct_single_key.rs  elgamal_circuit.rs  evm.rs  exp_chip.rs  first_circuit.rs  gate_chip.rs  grand_chip.rs  lib.rs  main.rs  poseidon_chip.rs  preimage_circuit.rs  range_chip.rs  utils.rs
